WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16072
MouseMove event fails when inside a mousedown over a scroll bar
https://bugs.webkit.org/show_bug.cgi?id=16072
Summary
MouseMove event fails when inside a mousedown over a scroll bar
Dav Glass
Reported
2007-11-20 08:58:03 PST
During YUI Release tests we found that in Safari 3.x (and Nightlies): Moving your mouse anywhere in the document results in a mousemove event being traced. Holding the mouse button down and moving your mouse anywhere in the document also results in a mousemove event being traced ... until you mouse over the scrollbars around a content div with overflow:scroll. mousemove no longer bubbles to the document (unless you move your mouse across the scroll bar really fast) Test Case attached as URL.
Attachments
patch
(4.85 KB, patch)
2007-11-29 16:27 PST
,
Adele Peterson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2007-11-20 09:48:48 PST
<
rdar://5463821
>
Adele Peterson
Comment 2
2007-11-29 16:27:20 PST
Created
attachment 17597
[details]
patch In addition to fixing the reported bug, I think this will have the effect of matching how hover effects work in native Windows scrollbars. I tested in Notepad, and saw that the hover effect doesn't show when the mouse is pressed and you rollover the scrollbar. I need help testing this on other platforms though, to make sure this doesn't break the hover effect on those scrollbars.
Adele Peterson
Comment 3
2007-11-29 16:32:08 PST
CC'ing some QT folks to see if they can help me w/ testing.
Darin Adler
Comment 4
2007-11-29 16:35:23 PST
Comment on
attachment 17597
[details]
patch r=me
Adele Peterson
Comment 5
2007-11-30 09:05:19 PST
Committed revision 28233.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug