WebCore:

Reviewed by Darin.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=16072
        <rdar://problem/5463821> REGRESSION: Mousemove event isn't fired when mouse moves over scrollbar with pressed button (16072)

        Test: fast/events/mousemove-after-drag-over-scrollbar.html

        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMouseMoveEvent): If the mouse is pressed, and we've moved over a new scrollbar, then we can clear m_lastScrollbarUnderMouse.
         We should only need to show the hover effect when the mouse isn't pressed.

LayoutTests:

        Reviewed by Darin.

        Test for http://bugs.webkit.org/show_bug.cgi?id=16072
        <rdar://problem/5463821> REGRESSION: Mousemove event isn't fired when mouse moves over scrollbar with pressed button

        * fast/events/mousemove-after-drag-over-scrollbar-expected.txt: Added.
        * fast/events/mousemove-after-drag-over-scrollbar.html: Added.



Canonical link: https://commits.webkit.org/22152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28233 268f45cc-cd09-0410-ab3c-d52691b4dbfc